fix: erros do sonar lint